Prevent text wrap in expanded portal view details section

--- a/src/less/portalQuickview.less
+++ b/src/less/portalQuickview.less
@@ -344,6 +344,10 @@
 				padding-right: 1.5em;
 				background-position: right center;
 				margin-top: 2px;
+
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
 			}
 
 			.attack {
